# trading

./: .gitignore  CMakeLists.txt  README.md  conanfile.py  main.cpp  test_task.md
cmake/: Helpers.cmake
include/trading/: trading.hpp
include/trading/core/: config_base.hpp  core.hpp  trading_platform.hpp
include/trading/core/impl/: trading_platform.hpp
include/trading/models/: currency.hpp  deal.hpp  deal_details.hpp  deal_fwd.hpp  market_member.hpp  market_member_fwd.hpp  models.hpp  order.hpp  order_details.hpp  order_fwd.hpp  orders_matching.hpp  orders_matching_fwd.hpp  segment.hpp  segment_analyzer.hpp  segment_fwd.hpp  trading_side.hpp  wallet.hpp
include/trading/models/impl/: deal.hpp  deal_details.hpp  market_member.hpp  order.hpp  order_details.hpp  orders_matching.hpp  segment.hpp  segment_analyzer.hpp  wallet.hpp
include/trading/storages/: default_storage.hpp  storage.hpp  storages.hpp
include/trading/storages/impl/: default_storage.hpp
include/trading/util/: custom_type_traits.hpp  tagged.hpp  tagged_numeric.hpp  util.hpp
include/trading/util/impl/: tagged_numeric.hpp
lib/trading/: .gitignore  CMakeLists.txt
lib/trading/cmake/: Helpers.cmake
lib/trading/src/: CMakeLists.txt
lib/trading/src/logic/: CMakeLists.txt  currency.hpp  deal.hpp  deal_details.hpp  default_storage.hpp  market_member.hpp  market_member_fwd.hpp  order.hpp  order_details.hpp  orders_matching.hpp  orders_matching_fwd.hpp  segment.hpp  segment_analyzer.hpp  storage.hpp  trading.hpp  trading_platform.hpp  trading_side.hpp  wallet.hpp
lib/trading/src/logic/impl/: CMakeLists.txt  deal_details_impl.hpp  market_member_impl.cpp  market_member_impl.hpp  order_details_impl.hpp  trading_platform_impl.cpp  trading_platform_impl.hpp  wallet_impl.cpp
lib/trading/src/util/: CMakeLists.txt  custom_type_traits.hpp  tagged.hpp  tagged_numeric.hpp
lib/trading/src/util/impl/: CMakeLists.txt
lib/trading/tests/: CMakeLists.txt
lib/trading/tests/logic/: CMakeLists.txt  currency_test.cpp  deal_test.cpp  default_storage_test.cpp  market_member_test.cpp  order_test.cpp  wallet_test.cpp
lib/trading/tests/util/: CMakeLists.txt  custom_type_traits_test.cpp
skeletion/: CMakeLists.txt  common.hpp  server.cpp
skeletion_temp/: client.cpp
src/: CMakeLists.txt  main.cpp
src/logic/: market_member.cpp  trading_platform.cpp  wallet.cpp
src/trading/: CMakeLists.txt  currency.hpp  deal.hpp  deal_details.hpp  deal_fwd.hpp  default_storage.hpp  market_member.cpp  market_member.hpp  market_member_fwd.hpp  order.hpp  order_details.hpp  order_fwd.hpp  orders_matching.hpp  segment.hpp  segment_analyzer.hpp  segment_fwd.hpp  storage.hpp  trading.hpp  trading_platform.cpp  trading_platform.hpp  trading_side.hpp  wallet.cpp  wallet.hpp
src/trading/impl/: CMakeLists.txt  deal_details_impl.hpp  deal_impl.hpp  default_storage_impl.hpp  market_member_impl.cpp  market_member_impl.hpp  order_details_impl.hpp  order_impl.hpp  orders_matching_impl.hpp  segment_analyzer_impl.hpp  segment_impl.hpp  trading_platform_impl.cpp  trading_platform_impl.hpp  wallet_impl.cpp  wallet_impl.hpp
src/util/: CMakeLists.txt  custom_type_traits.hpp  tagged.hpp  tagged_numeric.hpp  util.hpp
src/util/impl/: CMakeLists.txt
tests/: CMakeLists.txt
tests/models/: currency.cpp  deal.cpp  market_member.cpp  order.cpp  wallet.cpp
tests/storages/: default_storage.cpp
tests/trading/: CMakeLists.txt  currency_test.cpp  deal_test.cpp  default_storage_test.cpp  market_member_test.cpp  order_test.cpp  wallet_test.cpp
tests/util/: CMakeLists.txt  custom_type_traits.cpp  custom_type_traits_test.cpp
